    - Create groups automatically based on the category of an article
    - Structure of automatically created groups
    - Automatic protection of sub-pages
    - Dynamic assignees for groups and security descriptors
    - Show dynamic members in ACL articles    
  	
  CHANGES:
  	
  BUGFIXES: (Bug numbers according to http://smwforum.ontoprise.com/smwbugs/)
  14356 - Version Diff broken
  14369 - Derived factbox is not showing infered values
  13642 - Error in HACL_Setup.php when wiki is installed at c:\Program files\Ontorpise...
  13740 - Translation to other languages causes problems
  			Added spanish translation provided by Facundo Ezequiel Grande
  13804 - MediaWiki 1.16.0 patch is incorrect in Version 1.3.0_0 [B216]

Version 1.3

  FEATURE:
  	
  CHANGES:
  	
  BUGFIXES: (Bug numbers according to http://smwforum.ontoprise.com/smwbugs/)
	12548 -  $wgGroupPermissions dont prohibit $haclgOpenWikiAccess
	12210 -  Improved error message for protected pages



VERSION 1.2

  FEATURE:
  	Use groups and users from an LDAP/ActiveDirectory server
  	
  CHANGES:
  	* The extension was adapted to Semantic MediaWiki 1.5.1
  	
  BUGFIXES: (Bug numbers according to http://smwforum.ontoprise.com/smwbugs/)
	12098 - DF searches setup HACL_Setup.php in wrong path
	11836 - Protect properties prevents loading derived facts
	12005 - Auto-Completion should be aware of ACL settings
	12099 - HaloACL does not remove tables in the database when removed with DF
	11930 - Properties which are created by a user must be editable for the user
	11681 - Misc bugs from user feedback
	11938 - Autocompletion in HaloACL does not show namespace "Main"
	12077 - A HaloACL collapse button does not work.
	11256 - Error message when creating a ACL / Group which contains an error
  

VERSION 1.1.1


  FEATURES:
	No new features.


  CHANGES:
	* The extension was adapted to Semantic MediaWiki 1.5.0 and Semantic Forms 1.9.


  BUGFIXES:
	* The german language is now fully supported.